[package]
name = "activities"
version = "0.1.0"
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demo"
path = "src/lib/mod.rs"

[dependencies]
chrono = "0.4.19"
thiserror =  "*"
crossbeam-channel = "*"
parking_lot = "*"
